# bug_daddy

./: .gitignore  README.md  SECURITY.md  UI_CHANGES_TESTING_GUIDE.md  deploy-agents-to-agentcore.sh  deploy-backend-only.sh  deploy.sh  grabhack_infra.sh  lambda_function.py  local_run.sh  package-lock.json  package.json
.claude/: settings.json
.github/: pull_request_template.md
SME/: README.md  docker-compose.yml  rag_ingest_once.py
agents/: .env.example  Makefile  README.md  pyproject.toml
agents/apps/bug_daddy/: .bedrock_agentcore.yaml  .dockerignore  Dockerfile  main.py  pyproject.toml
agents/apps/bug_daddy/agentcore/: agentcore.json  aws-targets.json
agents/apps/bug_daddy/agentcore/.cli/: deployed-state.json
agents/apps/bug_daddy/agentic_solution/: agents.py  config.py  contracts.py  db_tools.py  execution.py  github_tools.py  heuristics.py  mcp.py  prompts.py
agents/apps/bug_daddy/agentic_solution/services/: bug.py  classifier.py  combined.py  incident.py  reviewer.py  slack_intake.py
agents/apps/incident_daddy/: main.py  pyproject.toml
agents/apps/incident_daddy/agentcore/: agentcore.json  aws-targets.json
agents/apps/incident_daddy/agentcore/.cli/: deployed-state.json
agents/apps/incident_daddy/agentic_solution/: __init__.py  agents.py  config.py  github_tools.py  heuristics.py  jira_tools.py  peer.py  prompts.py
agents/apps/incident_daddy/agentic_solution/services/: classifier.py  incident.py
agents/apps/reviewer_daddy/: agentic_solution  main.py  pyproject.toml
agents/apps/reviewer_daddy/agentcore/: agentcore.json  aws-targets.json
agents/apps/reviewer_daddy/agentcore/.cli/: deployed-state.json
agents/apps/reviewer_daddy/agentic_solution/: agents.py  config.py  execution.py  github_tools.py  heuristics.py  mcp.py  prompts.py
agents/apps/reviewer_daddy/agentic_solution/services/: incident.py  reviewer.py  sme.py
agents/apps/sme_agent/: main.py  pyproject.toml
agents/apps/sme_agent/agentcore/: agentcore.json  aws-targets.json
agents/apps/sme_agent/agentcore/.cli/: deployed-state.json
agents/apps/sme_agent/agentcore/cdk/: package-lock.json
agents/apps/sme_agent/agentic_solution/: mcp.py  prompts.py
agents/apps/sme_agent/agentic_solution/services/: __init__.py  bug.py  incident.py  reviewer.py  sme.py
agents/src/agentic_solution/: agents.py  config.py  contracts.py  execution.py  github_tools.py  heuristics.py  jira_tools.py  mcp.py  prompts.py  secrets.py
agents/src/agentic_solution.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agents/src/agentic_solution/orchestrator/: README.md  __init__.py  contracts.py  demo.py  orchestrator.py
agents/src/agentic_solution/orchestrator/agents/: __init__.py  availability.py  base.py  bootstrap.py  capacity.py  hygiene.py  security.py
agents/src/agentic_solution/orchestrator/observability/: __init__.py  audit.py  logging.py  metrics.py
agents/src/agentic_solution/orchestrator/routing/: __init__.py  registry.py  router.py
agents/src/agentic_solution/orchestrator/runtime/: __init__.py  circuit_breaker.py  executor.py  ingestion.py  normalization.py  recovery.py  scheduler.py  supervisor.py
agents/src/agentic_solution/orchestrator/samples/: __init__.py  triggers.py
agents/src/agentic_solution/rag/: __init__.py  client.py
agents/src/agentic_solution/services/: bug.py  classifier.py  combined.py  feature.py  incident.py  reviewer.py  sme.py
agents/tests/: conftest.py  test_combined_runtime.py  test_config.py  test_heuristics.py  test_rag_client.py  test_secrets.py  test_sme_runtime.py  test_workflow.py
agents/tests/orchestrator/: test_circuit_breaker.py  test_contracts.py  test_executor.py  test_ingestion.py  test_normalization.py  test_orchestrator_e2e.py  test_recovery.py  test_router.py  test_scheduler.py
architecture/: bugdaddy_architecture_hld_lld.rendered.md  grabhack_stack.yaml
bank-loan-application-app/: README.md  backend.MD  frontend.md  local_run.sh
docs/: HLD.md  LLD.md
microservices/: db_pool.py
platform/: .gitignore  N8N_REDESIGN_PLAN.md  README.md
scripts/: create_rds_schema.py
sonar/: .env.example  .gitignore  README.md  bootstrap-ec2.sh  docker-compose.yml  lambda_function.py  presign-report.sh  run-scan.sh  setup-aws.sh  setup-sonar-db.sql
tests/: test_run_face_match.py  (+1 more)
(+248 files in other folders)
