[project]
name = "agentic-solution"
version = "0.1.0"
description = "AgentCore-ready multi-agent incident and bug remediation workflow built with Strands."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "bedrock-agentcore",
  "boto3>=1.34.0",
  "mcp>=1.0.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "strands-agents",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
addopts = "-ra --strict-markers"
markers = [
  "integration: end-to-end orchestrator tests touching multiple layers",
]

[tool.coverage.run]
branch = true
source = ["agentic_solution"]
omit = [
  "*/orchestrator/demo.py",
  "*/orchestrator/samples/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle / pyflakes
  "I",             # isort
  "UP",            # pyupgrade
  "B",             # bugbear
  "C4",            # comprehensions
  "PT",            # pytest style
]
ignore = [
  "E501",          # long lines (we keep prose comments long on purpose)
  "B008",          # function call in default arg — pydantic Field uses this
  "PT011",         # raises too broad — fine for tests
  "UP042",         # `(str, Enum)` is fine — StrEnum locks 3.11+ semantics we don't need
  "W291",          # trailing whitespace inside prompt string literals is significant
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011", "E711", "B017", "C408"]
"src/agentic_solution/services/sme.py" = ["F841"]

[tool.mypy]
python_version = "3.11"
strict_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
ignore_missing_imports = true
files = ["src/agentic_solution/orchestrator", "src/agentic_solution/heuristics.py", "src/agentic_solution/secrets.py"]
