[project]
name = "sme-agent"
version = "0.1.0"
description = "Self-contained AgentCore app for shared SME reasoning."
requires-python = ">=3.11"
dependencies = [
  "bedrock-agentcore",
  "boto3>=1.34.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "strands-agents",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_solution*"]
